Convert SunImplementor and DelayRotateController to Kotlin.
Keep WeatherView drawing as Android View implementors. Accept nullable
canvas sizes to match the existing factory call site.

Co-authored-by: wangdaye <wangdayeeeeee@gmail.com>